--- a/package.json
+++ b/package.json
@@ -1,21 +1,18 @@
 {
 	"name": "@ovidlabs/blog",
-	"version": "3.0.5-alpha-6",
+	"version": "3.0.5-alpha-7",
 	"license": "GPL-3.0-or-later",
 	"keywords": [
-      "vendure-plugin",
-      "blog",
+		"vendure-plugin",
+		"blog",
 		"cms",
 		"content",
 		"content management",
-      "ecommerce",
-      "headless",
-      "vendure"
-   ],
-	"author": "Ovid Labs, LLC",
-	"contributors": [
-		"Lacey Pevey <lacey@ovidlabs.com>"
+		"ecommerce",
+		"headless",
+		"vendure"
 	],
+	"author": "Lacey Pevey",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"files": [
@@ -28,22 +25,26 @@
 	"homepage": "https://ovidlabs.com",
 	"funding": "https://github.com/sponsors/pevey",
 	"repository": {
-      "type": "git",
-      "url": "https://github.com/ovidlabs/blog"
-   },
+		"type": "git",
+		"url": "https://github.com/ovidlabs/blog"
+	},
 	"publishConfig": {
 		"access": "public"
 	},
 	"dependencies": {
 		"@acrodata/code-editor": "^0.5.0",
 		"dompurify": "^3.1.7",
-		"marked": "^14.1.3",
-		"ngx-chips": "^3.0.0"
+		"marked": "^14.1.3"
 	},
 	"peerDependencies": {
 		"@vendure/common": "^3.0.5",
 		"@vendure/core": "^3.0.5",
 		"@vendure/ui-devkit": "^3.0.5",
+		"typeorm": "^0.3.20"
+	},
+	"devDependencies": {
+		"@types/node": "^22.8.6",
+		"rimraf": "^6.0.1",
 		"typescript": "5.3.3"
 	}
 }
